# SciPP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  justfile  vcpkg.json
.github/workflows/: ci.yml
cmake/: config.hpp.in
include/scipp/: error.hpp  fwd.hpp  scipp.hpp  version.hpp.in
include/scipp/cluster/: cluster.hpp
include/scipp/constants/: constants.hpp
include/scipp/detail/: elementwise.hpp
include/scipp/differentiate/: differentiate.hpp
include/scipp/fft/: fft.hpp
include/scipp/integrate/: integrate.hpp
include/scipp/interpolate/: interpolate.hpp
include/scipp/io/: io.hpp
include/scipp/linalg/: detail.hpp  linalg.hpp
include/scipp/ndimage/: detail.hpp  ndimage.hpp
include/scipp/odr/: odr.hpp
include/scipp/optimize/: detail.hpp  optimize.hpp
include/scipp/signal/: iir_detail.hpp  signal.hpp
include/scipp/sparse/: detail.hpp  sparse.hpp
include/scipp/spatial/: spatial.hpp
include/scipp/special/: special.hpp
include/scipp/stats/: detail.hpp  stats.hpp
include/scypp/: error.hpp  fwd.hpp  scypp.hpp  version.hpp.in
include/scypp/cluster/: cluster.hpp
include/scypp/constants/: constants.hpp
include/scypp/detail/: elementwise.hpp
include/scypp/differentiate/: differentiate.hpp
include/scypp/fft/: fft.hpp
include/scypp/integrate/: integrate.hpp
include/scypp/interpolate/: interpolate.hpp
include/scypp/io/: io.hpp
include/scypp/linalg/: detail.hpp  linalg.hpp
include/scypp/ndimage/: detail.hpp  ndimage.hpp
include/scypp/odr/: odr.hpp
include/scypp/optimize/: detail.hpp  optimize.hpp
include/scypp/signal/: iir_detail.hpp  signal.hpp
include/scypp/sparse/: detail.hpp  sparse.hpp
include/scypp/spatial/: spatial.hpp
include/scypp/special/: special.hpp
include/scypp/stats/: detail.hpp  stats.hpp
openspec/: project.md
openspec/changes/add-cluster-io/: tasks.md
openspec/changes/add-fft/: design.md  tasks.md
openspec/changes/add-fft-dct-dst/: tasks.md
openspec/changes/add-fft-extras/: proposal.md  tasks.md
openspec/changes/add-gpu-acceleration/: proposal.md  tasks.md
openspec/changes/add-integrate/: design.md  tasks.md
openspec/changes/add-integrate-bdf/: proposal.md
openspec/changes/add-integrate-nested-quad/: proposal.md
openspec/changes/add-integrate-stiff-bvp/: proposal.md  tasks.md
openspec/changes/add-interpolate/: tasks.md
openspec/changes/add-interpolate-bsplines/: proposal.md  tasks.md
openspec/changes/add-interpolate-griddata/: tasks.md
openspec/changes/add-interpolate-splines/: proposal.md  tasks.md
openspec/changes/add-linalg/: proposal.md  tasks.md
openspec/changes/add-linalg-advanced/: proposal.md  tasks.md
openspec/changes/add-ndimage/: tasks.md
openspec/changes/add-odr/: proposal.md  tasks.md
openspec/changes/add-optimize/: design.md  tasks.md
openspec/changes/add-optimize-advanced/: proposal.md  tasks.md
openspec/changes/add-signal/: proposal.md  tasks.md
openspec/changes/add-signal-discrete-lti/: proposal.md
openspec/changes/add-signal-extras/: tasks.md
openspec/changes/add-signal-remaining/: proposal.md  tasks.md
openspec/changes/add-sparse/: design.md  proposal.md  tasks.md
openspec/changes/add-sparse-extras/: proposal.md  tasks.md
openspec/changes/add-spatial/: design.md  tasks.md
openspec/changes/add-special-constants/: design.md  proposal.md  tasks.md
openspec/changes/add-special-erf-extras/: tasks.md
openspec/changes/add-special-extras/: proposal.md  tasks.md
openspec/changes/add-special-hypergeometric/: proposal.md
openspec/changes/add-special-spherical-sici/: proposal.md
openspec/changes/add-stats/: design.md  proposal.md  tasks.md
openspec/changes/add-stats-extras/: proposal.md  tasks.md
openspec/changes/bootstrap-scypp-foundation/: design.md  proposal.md  tasks.md
openspec/specs/backend-acceleration/: spec.md
scripts/: bootstrap_numpp.sh
src/: CMakeLists.txt
src/cluster/: hierarchy.cpp  vq.cpp
src/constants/: codata_table.inc  constants.cpp
src/fft/: fft.cpp  realtransforms.cpp
src/integrate/: differentiate.cpp  nested_quad.cpp  quadrature.cpp  solve_bvp.cpp  solve_ivp.cpp
src/interpolate/: bspline.cpp  griddata.cpp  interp1d.cpp  rbf.cpp  regular_grid.cpp  splines.cpp
src/io/: io.cpp
src/linalg/: basic.cpp  decomp.cpp  eigen.cpp  matfuncs.cpp  special.cpp
src/ndimage/: filters.cpp  interpolation.cpp  measurements.cpp  morphology.cpp
src/odr/: odr.cpp
src/optimize/: least_squares.cpp  linprog.cpp  minimize.cpp  minimize_scalar.cpp  nnls.cpp  roots_scalar.cpp
src/signal/: convolution.cpp  design.cpp  design2.cpp  dlti.cpp  filter.cpp  filter2.cpp  lti.cpp  peaks.cpp  resample.cpp  spectral.cpp  spectral2.cpp  waveforms.cpp  windows.cpp
src/sparse/: csgraph.cpp  formats.cpp  linalg.cpp  ops.cpp
src/spatial/: distance.cpp  geometry.cpp  kdtree.cpp  rotation.cpp
src/special/: airy.cpp  bessel.cpp  combinatorics.cpp  elliptic.cpp  erf.cpp  erf_extras.cpp  expint.cpp  gamma.cpp  hypergeometric.cpp  misc.cpp  orthogonal.cpp  reductions.cpp  sici.cpp  spherical_bessel.cpp
src/stats/: descriptive.cpp  discrete.cpp  distributions.cpp  kde.cpp  normality.cpp  ranktests.cpp  special_inc.cpp  tests.cpp
tests/: CMakeLists.txt  main.cpp  scipp_test.hpp  scypp_test.hpp  test_cluster_io.cpp  test_constants.cpp  test_fft.cpp  test_foundation.cpp  test_integrate.cpp  test_integrate_bdf.cpp  test_integrate_bvp.cpp  test_integrate_nested.cpp  test_integrate_radau.cpp  test_interpolate.cpp  test_interpolate_bspline.cpp  test_interpolate_griddata.cpp  test_linalg.cpp  test_ndimage.cpp  test_odr.cpp  test_optimize.cpp  test_optimize_lp.cpp  test_signal.cpp  test_signal_discrete.cpp  test_signal_extras.cpp  test_sparse.cpp  test_sparse_csgraph.cpp  test_spatial.cpp  test_special.cpp  test_special_airy_elliptic.cpp  test_special_erf_extras.cpp  test_special_hypergeometric.cpp  test_special_misc.cpp  test_special_spherical_sici.cpp  test_stats.cpp  test_stats_discrete.cpp  test_stats_normality.cpp
tests/golden/: golden.hpp  sample.arff  sample.mtx
tests/oracle/: generate.py
(+170 files in other folders)
