add_library(scypp
  special/gamma.cpp
  special/erf.cpp
  special/expint.cpp
  special/bessel.cpp
  special/airy.cpp
  special/elliptic.cpp
  special/orthogonal.cpp
  special/combinatorics.cpp
  special/reductions.cpp
  constants/constants.cpp
  linalg/basic.cpp
  linalg/decomp.cpp
  linalg/eigen.cpp
  linalg/matfuncs.cpp
  linalg/special.cpp
  fft/fft.cpp
  fft/realtransforms.cpp
  optimize/roots_scalar.cpp
  optimize/minimize_scalar.cpp
  optimize/minimize.cpp
  optimize/least_squares.cpp
  optimize/linprog.cpp
  optimize/nnls.cpp
  integrate/quadrature.cpp
  integrate/nested_quad.cpp
  integrate/solve_ivp.cpp
  integrate/differentiate.cpp
  integrate/solve_bvp.cpp
  interpolate/interp1d.cpp
  interpolate/splines.cpp
  interpolate/bspline.cpp
  interpolate/regular_grid.cpp
  interpolate/rbf.cpp
  interpolate/griddata.cpp
  stats/special_inc.cpp
  stats/distributions.cpp
  stats/descriptive.cpp
  stats/tests.cpp
  stats/kde.cpp
  stats/discrete.cpp
  stats/ranktests.cpp
  stats/normality.cpp
  signal/convolution.cpp
  signal/windows.cpp
  signal/waveforms.cpp
  signal/filter.cpp
  signal/design.cpp
  signal/spectral.cpp
  signal/filter2.cpp
  signal/resample.cpp
  signal/peaks.cpp
  signal/lti.cpp
  signal/dlti.cpp
  signal/spectral2.cpp
  signal/design2.cpp
  sparse/formats.cpp
  sparse/ops.cpp
  sparse/linalg.cpp
  sparse/csgraph.cpp
  spatial/distance.cpp
  spatial/kdtree.cpp
  spatial/geometry.cpp
  spatial/rotation.cpp
  ndimage/filters.cpp
  ndimage/morphology.cpp
  ndimage/measurements.cpp
  ndimage/interpolation.cpp
  cluster/vq.cpp
  cluster/hierarchy.cpp
  io/io.cpp)

add_library(scypp::scypp ALIAS scypp)

target_compile_features(scypp PUBLIC cxx_std_20)

target_include_directories(scypp PUBLIC
  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
  $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/generated>
  $<INSTALL_INTERFACE:include>)

target_link_libraries(scypp PUBLIC numpp::numpp)
